--- a/login/login.html
+++ b/login/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title> Acceso </title>
 </head>
 <body>
     <h1>LOGIN</h1>
